<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_marginLeft="50dp"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
    <CheckBox
        android:layout_width="150dp"
        android:id="@+id/commercial"
        android:checked="true"
        android:textStyle="bold"
        android:text="@string/commercial"
        android:layout_height="wrap_content" />
    <CheckBox
        android:layout_width="150dp"
        android:id="@+id/residential"
        android:text="@string/residential"
        android:textStyle="bold"
        android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
<EditText
    android:layout_width="210dp"
    android:padding="5dp"
    android:id="@+id/address"
    android:textColor="@color/white"
    android:layout_height="wrap_content"
    android:hint="@string/input_location_hint" />
        <Button
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/customLocationButton"
            android:text="@string/go"/>
    </LinearLayout>
    <Button
        android:layout_width="300dp"
        android:padding="5dp"
        android:background="@color/white"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/myLocationButton"
        android:text="@string/use_my_location"
        android:drawableLeft="@drawable/ic_my_location_black_24dp"
        android:layout_height="40dp" />



</LinearLayout>